--- a/app/globals.css
+++ b/app/globals.css
@@ -8,6 +8,7 @@
 
 body {
   font-family: 'Onest', sans-serif;
+  overflow-x: hidden;
 }
 
 body::-webkit-scrollbar {
@@ -24,6 +25,22 @@ body::-webkit-scrollbar-track {
   background-color: #01030E;
   border-radius: 10px;
 }
+
+.scrollable::-webkit-scrollbar {
+  width: 8px;
+}
+
+.scrollable::-webkit-scrollbar-thumb {
+  background-color: #ffffff;
+  border-radius: 4px;
+  border: 2px solid #01030E;
+}
+
+.scrollable::-webkit-scrollbar-track {
+  background-color: #01030E;
+  border-radius: 10px;
+}
+
 
 @layer utilities {
   .text-balance {
